--- a/src/components/code/code-c/c-base/pages/elem-c.html
+++ b/src/components/code/code-c/c-base/pages/elem-c.html
@@ -789,11 +789,11 @@
 
   <p>Ключевые слова не могут быть идентификаторами и использоваться в качестве имени переменной или функции.</p>
   <p>Ключевые слова используются в типах данных, классах памяти, операторах</p>
-  <p>В стандарте С99 32 слова</p>
+  <p>В стандарте 32 слова</p>
   <ol>
     <li>
       <h4>Типы данных</h4>
-      <p>char, double, enum, float, int, long, short, struct, union, unsigned, void</p>
+      <p>char, const, double, enum, float, int, long, short, signed, struct, union, unsigned, void</p>
     </li>
     <li>
       <h4>Классы памяти</h4>
@@ -804,7 +804,10 @@
       <p>break, case, continue, default, do, else, for, goto, if, return, sizeof, switch, typedef, while</p>
     </li>
   </ol>
-  <p>const, signed</p>
+  <p>В стандарте C99 добавили еще 5 слов</p>
+  <p>_Bool, _Complex, _Imaginary, inline, restrict</p>
+  <p>В стандарте C11 добавили еще 7 слов</p>
+  <p>_Alignas, _Alignof, _Atomic, _Generic, _Noreturn, _Static_assert, _Thread_local</p>
 </article>
 
 
