--- a/src/components/code/code-c/c-books/pages/elem-book7.html
+++ b/src/components/code/code-c/c-books/pages/elem-book7.html
@@ -160,7 +160,8 @@ int main() {
 </pre>
   </details>
 
-  <h4>Программа 6 (60)</h4>
+  <details>
+    <summary>Программа 6 (60)</summary>
   <p>Применение функции printf()</p>
 <pre>
 #include &lt;stdio.h&gt;
@@ -172,8 +173,10 @@ int main() {
   printf("pi = %f", PI);
 }
 </pre>
+  </details>
 
-  <h4>Программа 7 (63)</h4>
+  <details>
+    <summary>Программа 7 (63)</summary>
   <p>Применение функции scanf()</p>
 <pre>
 #include &lt;stdio.h&gt;
@@ -188,6 +191,7 @@ int main() {
   printf("%d $%.0f %s", age, assets, fio);
 }
 </pre>
+  </details>
 
   <h4>Программа 8 (66)</h4>
   <p>Вычислить величину дохода по вкладу. Процентная ставка годовых, время хранения дней и сумма задаются во время работы программы.</p>
@@ -274,7 +278,8 @@ int main() {
   <div class="anchor" id="p6"></div>
   <h3>Лекция 6. Функции и переключение ввода-вывода (74)</h3>
 
-  <h4>Программа 11 (74)</h4>
+  <details>
+    <summary>Программа 11 (74)</summary>
   <p>Напишем программу, которая принимает один символ и выводит его на экран.</p>
 <pre>
 #include &lt;stdio.h&gt;
@@ -285,8 +290,10 @@ int main() {
   putchar(ch);
 }
 </pre>
+  </details>
 
-  <h4>Программа 12 (75)</h4>
+  <details>
+    <summary>Программа 12 (75)</summary>
   <p>Изменим нашу программу</p>
 <pre>
 #include &lt;stdio.h&gt;
@@ -295,8 +302,10 @@ int main() {
   putchar(getchar());
 }
 </pre>
+  </details>
 
-  <h4>Программа 13 (76)</h4>
+  <details>
+    <summary>Программа 13 (76)</summary>
   <p>Ввод и вывод нескольких символов</p>
 <pre>
 #include &lt;stdio.h&gt;
@@ -311,8 +320,10 @@ int main() {
   }
 }
 </pre>
+  </details>
 
-  <h4>Программа 14 (77)</h4>
+  <details>
+    <summary>Программа 14 (77)</summary>
   <p>Изменим программу</p>
 <pre>
 #include &lt;stdio.h&gt;
@@ -325,8 +336,10 @@ int main() {
   }
 }
 </pre>
+  </details>
 
-  <h4>Программа 15 (77)</h4>
+  <details>
+    <summary>Программа 15 (77)</summary>
   <p>Усложним пример ввода-вывода. Будем подсчитывать символы.</p>
 <pre>
 #include &lt;stdio.h&gt;
@@ -342,8 +355,10 @@ int main() {
   printf("%d symbols", count);
 }
 </pre>
+  </details>
 
-  <h4>Программа 16 (78)</h4>
+  <details>
+    <summary>Программа 16 (78)</summary>
   <p>Считывать символы пока не достигнем конца файла</p>
 <pre>
 #include &lt;stdio.h&gt;
@@ -355,7 +370,7 @@ int main() {
   }
 }
 </pre>
-
+  </details>
 </article>
 
 
@@ -364,7 +379,8 @@ int main() {
   <div class="anchor" id="p7"></div>
   <h3>Лекция 7. Выбор вариантов (83)</h3>
 
-  <h4>Программа 17 (83)</h4>
+  <details>
+    <summary>Программа 17 (83)</summary>
   <p>Подсчитаем число строк в файле</p>
 <pre>
 #include &lt;stdio&gt;
@@ -381,8 +397,10 @@ int main() {
   printf("%d lines", line_count);
 }
 </pre>
+  </details>
 
-  <h4>Программа 18 (84)</h4>
+  <details>
+    <summary>Программа 18 (84)</summary>
   <p>Подсчитаем число символов и строк в файле</p>
 <pre>
 #include &lt;stdio&gt;
@@ -402,8 +420,10 @@ int main() {
   printf("%d lines", line_count);
 }
 </pre>
+  </details>
 
-  <h4>Программа 19 (85)</h4>
+  <details>
+    <summary>Программа 19 (85)</summary>
   <p>Проверим входной символ больше 5 или нет</p>
 <pre>
 #include &lt;stdio&gt;
@@ -419,8 +439,10 @@ int main() {
   }
 }
 </pre>
+  </details>
 
-  <h4>Программа 20 (85)</h4>
+  <details>
+    <summary>Программа 20 (85)</summary>
   <p>Заменим каждый символ из таблицы ASCII на следующий символ, кроме символа "новая строка"</p>
 <pre>
 #include &lt;stdio&gt;
@@ -437,8 +459,10 @@ int main() {
   }
 }
 </pre>
+  </details>
 
-  <h4>Программа 21 (88)</h4>
+  <details>
+    <summary>Программа 21 (88)</summary>
   <p>Проверим оценку</p>
 <pre>
 #include &lt;stdio&gt;
@@ -457,10 +481,12 @@ int main() {
   }
 }
 </pre>
+  </details>
 
   <p>В языке Си все ненулевые значения являются истинными и только 0 является ложью.</p>
 
-  <h4>Программа 22 (89)</h4>
+  <details>
+    <summary>Программа 22 (89)</summary>
   <p>Проверим оценку</p>
 <pre>
 #include &lt;stdio&gt;
@@ -473,8 +499,10 @@ int main() {
   printf("true = %d\nfalse = %d", true, false);
 }
 </pre>
+  </details>
 
-  <h4>Программа 23 (91)</h4>
+  <details>
+    <summary>Программа 23 (91)</summary>
   <p>Посчитаем сколько символов не являются пробелами, табуляцией и символом новой строки.</p>
 <pre>
 #include &lt;stdio&gt;
@@ -491,6 +519,7 @@ int main() {
   printf("chars = %d", ch);
 }
 </pre>
+  </details>
 </article>
 
 
@@ -507,14 +536,99 @@ int main() {
   <div class="anchor" id="p9"></div>
   <h3>Лекция 9. Функции (107)</h3>
 
-</article>
+  <p>Напишем функцию abs возвращающую абсолютную часть числа.</p>
+  <details>
+    <summary>Программа 24 (111)</summary>
+<pre>
+#include &lt;stdio&gt;
 
+int abs(int x) {
+  int y;
+  y = (x &lt; 0) ? -x : x;
+  return y;
+}
 
-<!-- Лекция 9. Функции -->
-<article class="article">
-  <div class="anchor" id="p9"></div>
-  <h3>Лекция 9. Функции (107)</h3>
+int main() {
+  int a = 100, b = 0, c = -122;
+  int d, e, f;
+  d = abs(a);
+  e = abs(b);
+  f = abs(c);
+  printf("%d %d %d", d, e, f);
+}
+</pre>
+  </details>
+  <p>Напишем функцию abs возвращающую абсолютную часть числа. Второй вариант</p>
 
+  <details>
+    <summary>Программа 25 (112)</summary>
+<pre>
+#include &lt;stdio&gt;
+
+int abs(int x) {
+  if (x &lt; 0) {
+    return -x;
+  } else {
+    return x;
+  }
+}
+
+int main() {
+  int a = 100, b = 0, c = -122;
+  int d, e, f;
+  d = abs(a);
+  e = abs(b);
+  f = abs(c);
+  printf("%d %d %d", d, e, f);
+}
+</pre>
+  </details>
+  <p>Напишем функцию abs возвращающую абсолютную часть числа. Третий вариант</p>
+
+  <details>
+    <summary>Программа 26 (113)</summary>
+<pre>
+#include &lt;stdio&gt;
+
+int abs(int x) {
+  if (x &lt; 0) {
+    return -x;
+  }
+  return x;
+}
+
+int main() {
+  int a = 100, b = 0, c = -122;
+  int d, e, f;
+  d = abs(a);
+  e = abs(b);
+  f = abs(c);
+  printf("%d %d %d", d, e, f);
+}
+</pre>
+  </details>
+  <p>Напишем функцию summa суммирующую значения своих параметров</p>
+
+  <details>
+    <summary>Программа 27 (118)</summary>
+<pre>
+#include &lt;stdio&gt;
+
+int summa(int m, ...) {
+  int *p = &m;
+  int t = 0;
+  for (; m; m--) {
+    t += *(++p);
+  }
+  return t;
+}
+
+int main() {
+  printf("summa (2,4,6) = %d", summa(2,4,6));
+  printf("summa (1,2,3,4,5,6,7,8,9) = %d", summa(1,2,3,4,5,6,7,8,9));
+}
+</pre>
+  </details>
 </article>
 
 
@@ -531,6 +645,11 @@ int main() {
   <div class="anchor" id="p11"></div>
   <h3>Лекция 11. Препроцессор языка Си (126)</h3>
 
+  <p>Пустая директива не вызывает никаких действий</p>
+  <code>#</code>
+
+  <p>Прагма определяет действия, зависящие от реализации компилятора. Если препроцессор не знает конкретную прагму, то он ее игнорирует.</p>
+  <code>#pragma</code>
 </article>
 
 
